# shaderlab

./: Cargo.toml  README.md
src/: app.rs  blender.rs  builder.rs  context.rs  controls.rs  field.rs  framebuffer.rs  global.rs  graph.rs  hierarchy.rs  inspector.rs  main.rs  node.rs  nodes.rs  panel.rs  scene.rs  shader.wgsl  style.rs  util.rs
src/anima/: actions.rs  animation.rs  armature.rs  controller.rs  example.rs  gizmo.rs  grid.rs  math.rs  mod.rs  timeline.rs  viewport.rs
src/anima/runtime/: armature.rs  math.rs  mod.rs
src/app/: backend.rs  backend.wgsl  panel.rs  style.rs  tabs.rs
src/asset/: mod.rs  proxy.rs  scene.rs
src/builder/: expr.rs  extract.rs  merge.rs  node.rs  types.rs
src/builder/node/: input.rs  master.rs  math.rs
src/component/: editor.rs  handle.rs  light.rs  meta.rs  mod.rs  transform.rs
src/controls/: edge.rs  node.rs  port.rs  swizzle.rs  workspace.rs
src/node/: default.rs  edge.rs  input.rs  master.rs  math.rs  mod.rs  port.rs  types.rs
src/node/input/: basic.rs  geometry.rs  gradient.rs  lighting.rs  matrix.rs  pbr.rs  scene.rs  texture.rs
src/nodes/: builtin.rs  channel.rs  input.rs  logic.rs  master.rs
src/panel/: filebrowser.rs  hierarchy.rs  inspector.rs  placeholder.rs  scene.rs  timeline.rs  workspace.rs
src/panel/inspector/: field.rs
src/panel/timeline/: runtime.rs
src/panel/workspace/: builder.rs  port.rs
src/panel/workspace/builder/: expr.rs  types.rs
src/panel/workspace/nodes/: math.rs  util.rs  uv.rs
src/scene/: asset.rs  context.rs  filebrowser.rs  gizmo.rs  gizmo.wgsl  hierarchy.rs  inspector.rs  mod.rs  tab.rs
src/scene/component/: editor.rs  handle.rs  light.rs  meta.rs  mod.rs  proxy.rs  transform.rs
src/shell/: convert.rs  mod.rs  node.rs  render.rs  shader.wgsl  systems.rs
src/ui/: app.rs  field.rs  mod.rs  placeholder.rs  tabs.rs
src/ui/shell/: clipboard.rs  convert.rs  mod.rs  node.rs  render.rs  shader.wgsl  systems.rs  tests.rs
src/util/: anymap.rs  reflect.rs  slice.rs
src/widget/: extractor.rs  mod.rs  pad.rs  press_pad.rs  slider.rs
src/widget/slider/: renderer.rs  style.rs  widget.rs
src/workspace/: builder.rs  builtin.wgsl  link.rs  mod.rs  node.rs  port.rs  preview.rs
src/workspace/builder/: expr.rs  types.rs
src/workspace/nodes/: builtin.rs  channel.rs  input.rs  logic.rs  master.rs  math.rs  util.rs  uv.rs
