[package]
name = "shaderlab"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1"
slotmap = "1"
arrayvec = "0.7"

async-executor = "1.4"
#egui_wgpu_backend = "0.17"
pollster = "0.2"
egui = { version = "0.17", features = ["convert_bytemuck"] }
egui-winit = "0.17"
wgpu = "0.12"
winit = "0.26.1"

bytemuck = "1.9"

naga = { version = "0.8", features = ["wgsl-in", "wgsl-out"] }
downcast-rs = "1.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ahash = "0.7.6"
sublime_fuzzy = "0.7.0"

bevy = "0.7"

[profile.dev]
opt-level = 1

[profile.dev.package]
wgpu = { opt-level = 3 }
naga = { opt-level = 3 }
winit = { opt-level = 3 }
egui = { opt-level = 3 }
bevy = { opt-level = 3 }