[package]
name = "shaderlab"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1"
slotmap = "1"
arrayvec = "0.7"

async-executor = "1.4"
pollster = "0.2"
egui = { version = "0.18.1", features = ["bytemuck"] }
egui-winit = "0.18"
winit = "0.26.1"
webbrowser = "0.7.0"

bytemuck = "1.9"

wgpu = "0.13"
naga = { version = "0.9", features = ["wgsl-in", "wgsl-out"] }
downcast-rs = "1.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ahash = "0.7.6"
sublime_fuzzy = "0.7.0"

undo = "0.47"

bevy = "0.8.0-dev"

smallvec = "1"

anyhow = "1.0"
thiserror = "1.0"
serde = "1"
uuid = { version = "1", features = ["v4", "serde"] }
ron = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "2.0.1"
thread_local = "1.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package]
wgpu = { opt-level = 3 }
naga = { opt-level = 3 }
winit = { opt-level = 3 }
egui = { opt-level = 3 }
bevy = { opt-level = 3 }

[patch.crates-io]
bevy = { git = 'https://github.com/bevyengine/bevy' }